# app-binary2d

./: .gitignore  Cargo.toml  README.md  build_loader.sh  hdf5_practice.py  input.yaml  palmetto_setup.sh  plot.py  setup.py  setup.sh  upsampling_script.py
cdc_loader/: Cargo.toml
cdc_loader/src/: lib.rs
cdc_tools/: model.py  plot.py  tseries.py  upsample.py
io-logical/: Cargo.toml
io-logical/src/: lib.rs  nicer_hdf5.rs  verified.rs
loader/: Cargo.toml
loader/src/: lib.rs
math/: DiskModels.nb
ndarray-ops/: Cargo.toml
ndarray-ops/src/: lib.rs
pbs_jobs/: job_template.pbs  test_job.pbs
rayon-future/: Cargo.toml
rayon-future/src/: lib.rs
setups/: cooling-cbd.yaml  iso-circular.yaml  iso-finite.yaml  residual_test.yaml  test-grid-visc.yaml
src/: app.rs  dataflow.rs  disks.rs  io.rs  lib.rs  main.rs  mesh.rs  model.rs  physics.rs  scheme.rs  scheme_v1.rs  scheme_v2.rs  state.rs  tasks.rs  tracers.rs  traits.rs
tools/: indep_res_analysis.py  model.py  movie_maker.py  output_parse.py  plot  plot.py  residual_test  show-config  time-series  time-series.py  tseries.py  tseries_modded.py  tseries_modded2.py  upsample.py
upsampler/: Cargo.toml
upsampler/src/: main.rs
