[package]
name        = "binary2d"
version     = "0.1.9"
edition     = "2018"
description = "Clemson CAL Circumbinary Disk Code (CDC)"
authors     = ["Jonathan Zrake", "Christopher Tiede", "John Ryan Westernacher-Schneider", "Jack Hu"]
readme      = "README.md"
repository  = "https://github.com/clemson-cal/app-binary2d"


[dependencies]
num             = "0.3"
libm            = "0.2"
ndarray         = "0.14"
hdf5            = "0.7"
clap            = "3.0.0-beta"
glob            = "0.3"
anyhow          = "1.0"
thiserror       = "1.0"
num_cpus        = "1.0"
git-version     = "0.3"
futures         = "0.3"
async-trait     = "0.1"
tokio           = { version = "1.0", features = ["rt-multi-thread"] }

kind-config     = { git = "https://github.com/clemson-cal/kind-config",     features = ["hdf5"] }
kepler-two-body = { git = "https://github.com/clemson-cal/kepler-two-body", features = ["hdf5"] }
hydro-iso2d     = { git = "https://github.com/clemson-cal/hydro-iso2d",     features = ["hdf5"] }
hydro-euler     = { git = "https://github.com/clemson-cal/hydro-euler",     features = ["hdf5"] }
godunov-core    = { git = "https://github.com/clemson-cal/godunov-core" }
ndarray-ops     = { git = "https://github.com/clemson-cal/ndarray-ops" }
io-logical      = { path = "io-logical" }


[profile.release]
lto = "thin"
