[package]
name        = "binary2d"
version     = "0.1.9"
edition     = "2018"
description = "Clemson CAL Circumbinary Disk Code (CDC)"
authors     = ["Jonathan Zrake", "Christopher Tiede", "John Ryan Westernacher-Schneider", "Jack Hu"]
readme      = "README.md"
repository  = "https://github.com/clemson-cal/app-binary2d"


[dependencies]
libm            = "0.2"
glob            = "0.3"
anyhow          = "1.0"
thiserror       = "1.0"
num_cpus        = "1.0"
git-version     = "0.3"
futures         = "0.3"
async-trait     = "0.1"
ciborium        = "0.1"
serde_yaml      = "0.8"
yaml-patch      = "0.1"
derive_more     = "0.9"
ndarray         = { version = "0.14", features = ["serde"] }
num             = { version = "0.3",  features = ["serde"] }
serde           = { version = "1.0",  features = ["derive"] }
tokio           = { version = "1.0",  features = ["rt-multi-thread"] }

kepler-two-body = { git = "https://github.com/clemson-cal/kepler-two-body", features = ["serde"] }
hydro-iso2d     = { git = "https://github.com/clemson-cal/hydro-iso2d",     features = ["serde"] }
hydro-euler     = { git = "https://github.com/clemson-cal/hydro-euler",     features = ["serde"] }
godunov-core    = { git = "https://github.com/clemson-cal/godunov-core" }
ndarray-ops     = { git = "https://github.com/clemson-cal/ndarray-ops" }


[profile.release]
lto = "thin"
