[package]
name = "io-logical"
version = "0.1.0"
authors = ["Jonathan Zrake <jonathan.zrake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror       = "1.0"
serial_test     = "0.5"
glob            = "0.3"
either          = "1.6"
num             = "0.3"
ndarray         = "0.14"
hdf5            = "0.7"
